# LiveRecorder

./: .gitignore  build.spec  config.db  config.json  config.sample.json  gui.py  live_recorder.py  pyproject.toml
src/liverecorder/: __main__.py  config_manager.py  gui.py  live_recorder.py  logger_config.py  path_utils.py  recorder_core.py
src/liverecorder.dist-info/: METADATA  top_level.txt
src/liverecorder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
