[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "LiveRecorder"
bundle = "org.beeware.toga.examples"
version = "0.0.1"
url = "https://ly.com"
license.file = "LICENSE"
author = "Jack"
author_email = "ly@ly.com"

[tool.briefcase.app.liverecorder]
formal_name = "LiveRecorder"
description = "直播录制工具"
sources = ["src/liverecorder"]