[build-system]
requires = ["briefcase"]

[project]
name = "LiveRecorder"
version = "1.1.0"
description = "一款全自动直播录制工具"
authors = [
    { name = "kevin", email = "kevin@gmail.com" }
]
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "streamlink>=6.8.2",
    "httpx[http2]>=0.27.0",
    "ffmpeg-python>=0.2.0",
    "loguru>=0.7.2",
    "jsonpath-ng>=1.6.1",
    "jsengine>=1.0.7.post1",
    "quickjs>=1.19.4",
    "httpx-socks[asyncio]>=0.9.1",
    "PyQt6>=6.4.2"
]

[tool.briefcase]
project_name = "LiveRecorder"
bundle = "com.example"
version = "1.1.0"
url = "https://www.github.com"
license = "MIT"
author = "LiveRecorder"
author_email = "kevin@gmail.com"

[tool.briefcase.app.liverecorder]
formal_name = "LiveRecorder"
description = "一款全自动直播录制工具"
icon = "utils/icon.ico"
sources = ["src/liverecorder"]
requires = [
    "streamlink>=6.8.2",
    "httpx[http2]>=0.27.0",
    "ffmpeg-python>=0.2.0",
    "loguru>=0.7.2",
    "jsonpath-ng>=1.6.1",
    "jsengine>=1.0.7.post1",
    "quickjs>=1.19.4",
    "httpx-socks[asyncio]>=0.9.1",
    "toga>=0.5.1"
]
app_module = "liverecorder"

[tool.briefcase.app.liverecorder.windows]
requires = []

[tool.briefcase.app.liverecorder.macOS]
requires = []

[tool.briefcase.app.liverecorder.linux]
requires = []